<resources>
    <string name="app_name">AgeCalculatorInMinutes</string>
    <string name="age">AGE</string>
    <string name="calculate_your">CALCULATE YOUR</string>
    <string name="in_minutes">IN MINUTES</string>
    <string name="date">26.04.2024</string>
    <string name="selected_date">Selected Date</string>
    <string name="minutes">14000000</string>
    <string name="in_minutes_till_date">in minutes till date</string>
    <string name="select_date">Select Date</string>
    <string name="age_in_minutes">Age-In-Minutes</string>
</resources>